--- a/packages/formation-react/src/components/Telephone/Telephone.mdx
+++ b/packages/formation-react/src/components/Telephone/Telephone.mdx
@@ -153,3 +153,7 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
 | `911` | `###` | Matches the `911` contact number |
 | `DEFAULT` | `###-###-####` | Current phone pattern used throughout the site |
 | `OUTSIDE_US` | `+1-###-###-####` | Use on pages for veterans outside the U.S. |
+
+### Related
+
+Telephone is also a sub-component of `AccessibleLink`
