--- a/packages/formation-react/src/components/AccessibleLink/AccessibleLink.mdx
+++ b/packages/formation-react/src/components/AccessibleLink/AccessibleLink.mdx
@@ -1,16 +1,10 @@
 ---
 title: AccessibleLink
 name: AccessibleLink
-tags: accessible, accessiblelink, component
+tags: accessible, link, component
 ---
 
-import AccessibleLink, {
-  CONTACTS,
-  PATTERNS,
-  MEDIA_SITES,
-  FILE_TYPES,
-  FILE_SIZES,
-} from './AccessibleLink';
+import AccessibleLink, { CONTACTS } from './AccessibleLink';
 
 ### Code:
 
