--- a/packages/formation-react/src/components/MediaLink/MediaLink.mdx
+++ b/packages/formation-react/src/components/MediaLink/MediaLink.mdx
@@ -1,7 +1,7 @@
 ---
 title: MediaLink
 name: MediaLink
-tags: medialink, component
+tags: media, video, social, link, component
 ---
 
 import MediaLink from './MediaLink';
