--- a/packages/formation-react/src/components/Telephone/Telephone.mdx
+++ b/packages/formation-react/src/components/Telephone/Telephone.mdx
@@ -1,7 +1,7 @@
 ---
 title: Telephone
 name: Telephone
-tags: telephone, component
+tags: telephone, link, component
 ---
 
 import Telephone, { CONTACTS, PATTERNS } from './Telephone';
