Switch template to content callback function

--- a/packages/formation-react/src/components/AccessibleLink/AccessibleLink.mdx
+++ b/packages/formation-react/src/components/AccessibleLink/AccessibleLink.mdx
@@ -14,7 +14,7 @@ import AccessibleLink, {
   PATTERNS,    // Telephone pattern
   MEDIA_SITES, // MediaLink sites
   FILE_TYPES,  // DownloadLink known MIME-types
-  FILE_SIZES,  // DownloadLink known file sizes (B, KB, MB & GB)
+  createIcon,  // create an accessible icon (see DownloadLink or MediaLink for examples)
 } from '@department-of-veterans-affairs/formation-react/AccessibleLink';
 
 // Download minimal example
