--- a/packages/formation-react/src/components/DownloadLink/DownloadLink.mdx
+++ b/packages/formation-react/src/components/DownloadLink/DownloadLink.mdx
@@ -15,18 +15,13 @@ import DownloadLink from '@department-of-veterans-affairs/formation-react/Downlo
 <DownloadLink href="https://example.com/form.jpg" title="example image" />
 
 /* Renders as
-<a
-  href="https://example.com/form.jpg"
-  type="application/pdf"
-  target="_blank"
-  rel="noopener noreferrer"
-  download
->
-  <i role="img" aria-hidden="true" class="vads-u-padding-right--1 fas fa-download" />
-  Download example image
-  <dfn>
-    <abbr title="graphic">JPG</abbr>
-  </dfn>
+<a href="https://example.com/form.jpg" download type="image/jpeg">
+  <i
+    role="img"
+    aria-hidden="true"
+    class="vads-u-padding-right--1 fas fa-download"
+  />
+  Download example image <dfn><abbr title="graphic">JPG</abbr> </dfn>
 </a>
 */
 
@@ -40,12 +35,14 @@ import DownloadLink from '@department-of-veterans-affairs/formation-react/Downlo
 /* Renders as
 <a
   href="https://example.va.gov/form.pdf"
-  type="application/pdf"
-  target="_blank"
-  rel="noopener noreferrer"
   download
+  type="application/pdf"
 >
-  <i role="img" aria-hidden="true" class="vads-u-padding-right--1 fas fa-download" />
+  <i
+    role="img"
+    aria-hidden="true"
+    class="vads-u-padding-right--1 fas fa-download"
+  />
   Download second example form
   <dfn>
     <abbr title="Portable Document Format">PDF</abbr>
@@ -64,12 +61,16 @@ import DownloadLink from '@department-of-veterans-affairs/formation-react/Downlo
 /* Renders as
 <a
   href="https://example.com/file.xyz"
-  target="_blank"
-  rel="noopener noreferrer"
   download
   type="application/unknown"
+  target="_blank"
+  rel="noopener noreferrer"
 >
-  <i role="img" aria-hidden="true" class="vads-u-padding-right--1 fas fa-download" />
+  <i
+    role="img"
+    aria-hidden="true"
+    class="vads-u-padding-right--1 fas fa-download"
+  />
   Download some unknown file type
   <dfn>
     <abbr title="xyz">XYZ</abbr>
@@ -77,41 +78,55 @@ import DownloadLink from '@department-of-veterans-affairs/formation-react/Downlo
 </a>
 */
 
-// Include custom link content
-<DownloadLink href="https://example.com/readme" title="example">
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" height="16">
-    <path d="M28.7 7.2a28.4 28.4 0 0 0-5.9-5.9C21.2.1 20.4 0 20 0H4.5A2.5 2.5 0 0 0 2 2.5v27C2 30.9 3.1 32 4.5 32h23c1.4 0 2.5-1.1 2.5-2.5V10c0-.4-.1-1.2-1.3-2.8zm-4.2-1.7c1 1 1.8 1.8 2.3 2.5H22V3.2c.7.5 1.6 1.3 2.5 2.3zm3.5 24c0 .3-.2.5-.5.5h-23a.5.5 0 0 1-.5-.5v-27c0-.3.2-.5.5-.5H20v7c0 .6.4 1 1 1h7v19.5z" />
-    <path d="M8 2h4v2H8V2zM12 4h4v2h-4V4zM8 6h4v2H8V6zM12 8h4v2h-4V8zM8 10h4v2H8v-2zM12 12h4v2h-4v-2zM8 14h4v2H8v-2zM12 16h4v2h-4v-2zM8 26.5c0 .8.7 1.5 1.5 1.5h5c.8 0 1.5-.7 1.5-1.5v-5c0-.8-.7-1.5-1.5-1.5H12v-2H8v8.5zm6-2.5v2h-4v-2h4z" />
-  </svg>{' '}
-  Download a readme file
-</DownloadLink>
+// Include custom icon & link content
+<DownloadLink
+  href="https://example.com/readme"
+  title="example"
+  size={2.3e6} // size in bytes
+  icon={(
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" height="16">
+      <path d="M28.7 7.2a28.4 28.4 0 0 0-5.9-5.9C21.2.1 20.4 0 20 0H4.5A2.5 2.5 0 0 0 2 2.5v27C2 30.9 3.1 32 4.5 32h23c1.4 0 2.5-1.1 2.5-2.5V10c0-.4-.1-1.2-1.3-2.8zm-4.2-1.7c1 1 1.8 1.8 2.3 2.5H22V3.2c.7.5 1.6 1.3 2.5 2.3zm3.5 24c0 .3-.2.5-.5.5h-23a.5.5 0 0 1-.5-.5v-27c0-.3.2-.5.5-.5H20v7c0 .6.4 1 1 1h7v19.5z" />
+      <path d="M8 2h4v2H8V2zM12 4h4v2h-4V4zM8 6h4v2H8V6zM12 8h4v2h-4V8zM8 10h4v2H8v-2zM12 12h4v2h-4v-2zM8 14h4v2H8v-2zM12 16h4v2h-4v-2zM8 26.5c0 .8.7 1.5 1.5 1.5h5c.8 0 1.5-.7 1.5-1.5v-5c0-.8-.7-1.5-1.5-1.5H12v-2H8v8.5zm6-2.5v2h-4v-2h4z" />
+    </svg>
+  )}
+  content={({ renderedSize }) => (
+    <> Download a readme file {renderedSize}</>
+  )}
+/>
 
 /* Renders as
 <a
   href="https://example.com/readme"
-  target="_blank"
-  rel="noopener noreferrer"
+  download
+  type="application/unknown"
 >
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" height="16">
     <path d="M28.7 7.2a28.4 28.4 0 0 0-5.9-5.9C21.2.1 20.4 0 20 0H4.5A2.5 2.5 0 0 0 2 2.5v27C2 30.9 3.1 32 4.5 32h23c1.4 0 2.5-1.1 2.5-2.5V10c0-.4-.1-1.2-1.3-2.8zm-4.2-1.7c1 1 1.8 1.8 2.3 2.5H22V3.2c.7.5 1.6 1.3 2.5 2.3zm3.5 24c0 .3-.2.5-.5.5h-23a.5.5 0 0 1-.5-.5v-27c0-.3.2-.5.5-.5H20v7c0 .6.4 1 1 1h7v19.5z" />
     <path d="M8 2h4v2H8V2zM12 4h4v2h-4V4zM8 6h4v2H8V6zM12 8h4v2h-4V8zM8 10h4v2H8v-2zM12 12h4v2h-4v-2zM8 14h4v2H8v-2zM12 16h4v2h-4v-2zM8 26.5c0 .8.7 1.5 1.5 1.5h5c.8 0 1.5-.7 1.5-1.5v-5c0-.8-.7-1.5-1.5-1.5H12v-2H8v8.5zm6-2.5v2h-4v-2h4z" />
   </svg>
-  Download a readme file
+  Download a readme file (2.3<abbr title="Megabytes">MB</abbr>)
 </a>
 */
 
 // Showing all properties
 <DownloadLink
   href="https://example.va.gov/big-doc.doc"
-  title={<React.Fragment key="foo">a huge <em>legacy</em> MS doc</React.Fragment>} // string or JSX
-  size="1.2gb"
+  title={<>a huge <em>legacy</em> MS document file</>} // string or JSX
+  size={1.2e9}
 
   // MIME-type determined by file extension; but can be overridden
   type="application/msword"
 
   // Additional settings
   icon="fas fa-download foo" // string or JSX
-  template="Download {title} YAY! {fileInfo}" // string only
+  content={({ props, renderedSize, renderedExtension, linkProps }) => (
+    <>
+      Download {props.title}{' '}
+      <dfn>
+        {renderedExtension} {renderedSize}
+      </dfn>
+    </>
+  )}
   download="my-document.doc"
   external={false}
 
@@ -129,10 +144,14 @@ import DownloadLink from '@department-of-veterans-affairs/formation-react/Downlo
   class="foo"
   data-test="bar"
 >
-  <i role="img" aria-hidden="true" class="vads-u-padding-right--1 fas fa-download foo" />
-  Download a huge <em>legacy</em> MS doc YAY!
+  <i
+    role="img"
+    aria-hidden="true"
+    class="vads-u-padding-right--1 fas fa-download foo"
+  />
+  Download a huge <em>legacy</em> MS document file
   <dfn>
-    <abbr title="Word document">DOCX</abbr>
+    <abbr title="Word document">DOC</abbr>
     (1.2<abbr title="Gigabytes">GB</abbr>)
   </dfn>
 </a>
@@ -166,27 +185,42 @@ import DownloadLink from '@department-of-veterans-affairs/formation-react/Downlo
 
   <strong>Include custom link content</strong>
   <p>
-    <DownloadLink href="https://example.com/readme" title="example">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" height="16">
-        <path d="M28.7 7.2a28.4 28.4 0 0 0-5.9-5.9C21.2.1 20.4 0 20 0H4.5A2.5 2.5 0 0 0 2 2.5v27C2 30.9 3.1 32 4.5 32h23c1.4 0 2.5-1.1 2.5-2.5V10c0-.4-.1-1.2-1.3-2.8zm-4.2-1.7c1 1 1.8 1.8 2.3 2.5H22V3.2c.7.5 1.6 1.3 2.5 2.3zm3.5 24c0 .3-.2.5-.5.5h-23a.5.5 0 0 1-.5-.5v-27c0-.3.2-.5.5-.5H20v7c0 .6.4 1 1 1h7v19.5z" />
-        <path d="M8 2h4v2H8V2zM12 4h4v2h-4V4zM8 6h4v2H8V6zM12 8h4v2h-4V8zM8 10h4v2H8v-2zM12 12h4v2h-4v-2zM8 14h4v2H8v-2zM12 16h4v2h-4v-2zM8 26.5c0 .8.7 1.5 1.5 1.5h5c.8 0 1.5-.7 1.5-1.5v-5c0-.8-.7-1.5-1.5-1.5H12v-2H8v8.5zm6-2.5v2h-4v-2h4z" />
-      </svg>
-      Download a readme file
-    </DownloadLink>
+    <DownloadLink
+      href="https://example.com/readme"
+      title="example"
+      size={2.3e6} // size in bytes
+      icon={(
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" height="16">
+          <path d="M28.7 7.2a28.4 28.4 0 0 0-5.9-5.9C21.2.1 20.4 0 20 0H4.5A2.5 2.5 0 0 0 2 2.5v27C2 30.9 3.1 32 4.5 32h23c1.4 0 2.5-1.1 2.5-2.5V10c0-.4-.1-1.2-1.3-2.8zm-4.2-1.7c1 1 1.8 1.8 2.3 2.5H22V3.2c.7.5 1.6 1.3 2.5 2.3zm3.5 24c0 .3-.2.5-.5.5h-23a.5.5 0 0 1-.5-.5v-27c0-.3.2-.5.5-.5H20v7c0 .6.4 1 1 1h7v19.5z" />
+          <path d="M8 2h4v2H8V2zM12 4h4v2h-4V4zM8 6h4v2H8V6zM12 8h4v2h-4V8zM8 10h4v2H8v-2zM12 12h4v2h-4v-2zM8 14h4v2H8v-2zM12 16h4v2h-4v-2zM8 26.5c0 .8.7 1.5 1.5 1.5h5c.8 0 1.5-.7 1.5-1.5v-5c0-.8-.7-1.5-1.5-1.5H12v-2H8v8.5zm6-2.5v2h-4v-2h4z" />
+        </svg>
+      )}
+      content={({ renderedSize }) => (
+        <> Download a readme file {renderedSize}</>
+      )}
+    />
   </p>
 
   <strong>Showing all properties</strong>
   <p>
     <DownloadLink
       href="https://example.va.gov/big-doc.doc"
-      title={<React.Fragment key="foo">a huge <em>legacy</em> MS doc</React.Fragment>}
-      size="1.2gb"
+      title={<>a huge <em>legacy</em> MS document file</>}
+      size={1.2e9}
       type="application/msword"
       icon="fas fa-download foo"
-      template="Download {title} YAY! {fileInfo}"
+      content={({ props, renderedSize, renderedExtension, linkProps }) => (
+        <>
+          Download {props.title}{' '}
+          <dfn>
+            {renderedExtension} {renderedSize}
+          </dfn>
+        </>
+      )}
       download="my-document.doc"
       external={false}
       className="foo"
+      data-test="bar"
     />
   </p>
 </div>
@@ -229,15 +263,6 @@ this [extensive list of media MIME-types](https://www.iana.org/assignments/media
 | video | `wmv` | `'video/x-ms-asf'` |
 | Word document | `doc` | `'application/msword'` |
 | Word document | `docx` | `'application/vnd.openxmlformats-officedocument.wordprocessingml.document'` |
-
-### Predefined file size units
-
-| Abbreviation | Unit |
-|:-------------|:-----|
-| B  | Bytes     |
-| KB | Kilobytes |
-| MB | Megabytes |
-| GB | Gigabytes |
 
 ### Related
 
