--- a/packages/formation-react/src/components/DownloadLink/DownloadLink.mdx
+++ b/packages/formation-react/src/components/DownloadLink/DownloadLink.mdx
@@ -15,7 +15,13 @@ import DownloadLink from '@department-of-veterans-affairs/formation-react/Downlo
 <DownloadLink href="https://example.com/form.jpg" title="example image" />
 
 /* Renders as
-<a href="https://example.com/form.jpg" download type="image/jpeg">
+<a
+  href="https://example.com/form.jpg"
+  download
+  type="image/jpeg"
+  target="_blank"
+  rel="noopener noreferrer"
+>
   <i
     role="img"
     aria-hidden="true"
@@ -37,6 +43,8 @@ import DownloadLink from '@department-of-veterans-affairs/formation-react/Downlo
   href="https://example.va.gov/form.pdf"
   download
   type="application/pdf"
+  target="_blank"
+  rel="noopener noreferrer"
 >
   <i
     role="img"
@@ -99,6 +107,8 @@ import DownloadLink from '@department-of-veterans-affairs/formation-react/Downlo
   href="https://example.com/readme"
   download
   type="application/unknown"
+  target="_blank"
+  rel="noopener noreferrer"
 >
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" height="16">
     <path d="M28.7 7.2a28.4 28.4 0 0 0-5.9-5.9C21.2.1 20.4 0 20 0H4.5A2.5 2.5 0 0 0 2 2.5v27C2 30.9 3.1 32 4.5 32h23c1.4 0 2.5-1.1 2.5-2.5V10c0-.4-.1-1.2-1.3-2.8zm-4.2-1.7c1 1 1.8 1.8 2.3 2.5H22V3.2c.7.5 1.6 1.3 2.5 2.3zm3.5 24c0 .3-.2.5-.5.5h-23a.5.5 0 0 1-.5-.5v-27c0-.3.2-.5.5-.5H20v7c0 .6.4 1 1 1h7v19.5z" />
