Test invalid JSX.

--- a/packages/documentation/src/pages/forms/about-the-schema-and-uischema-objects.mdx
+++ b/packages/documentation/src/pages/forms/about-the-schema-and-uischema-objects.mdx
@@ -4,7 +4,7 @@ title: About the schema and uiSchema objects
 
 # About the schema and uiSchema objects
 
-The VA.gov Forms System lets you build web-based forms using the JSON Schema standard for form data and React for the form UI. The form data and UI are represented by `schema` and `uiSchema` objects, respectively, which are included in the form configuration file.
+The VA.gov Forms System lets you build web-based forms using the JSON Schema standard for form data and React for the form UI. The form data and UI are represented by `schema` and `uiSchema` objects, respectively, which are included in the form configuration file. <dt> and <dd> elements
 
 - [Understanding the `schema` object](#understanding-the-schema-object)
   - [Describing object fields and arrays](#describing-object-fields-and-arrays)
