--- a/packages/documentation/src/pages/gatsby-configurations.mdx
+++ b/packages/documentation/src/pages/gatsby-configurations.mdx
@@ -375,7 +375,7 @@ createPage({
 ```
 
 Now that we have that setup we need to add the layout for our components pages.
-If you go to `src/layouts/module-components.js` you can seee how we setu our pages
+If you go to `src/layouts/module-components.js` you can see how we setup our pages
 to be able to render MDX. Here is a sample of the JSX.
 
 ```
@@ -449,7 +449,7 @@ export const pageQuery = graphql`
 ### Adding Live Code
 Here is an example of how you add live editable code onto your page.
 Note: This has not been fully implemented on our pages yet. This is something
-we need to explore further if we really wants to have this feature.
+we need to explore further if we really want to have this feature.
 
 ```
 import React, {Component} from "react";
