Add `itemNameLowerCase` option

--- a/packages/documentation/src/pages/forms/using-available-fields.mdx
+++ b/packages/documentation/src/pages/forms/using-available-fields.mdx
@@ -97,6 +97,7 @@ contactInfo: {
       startInEdit: false,
       volatileData: false,
       itemName: 'Name',
+      itemNameLowerCase: 'name',
     },
     phone: phoneUI('Home phone'),
     emailAddress: emailUI(),
@@ -111,7 +112,8 @@ contactInfo: {
 - `volatileData` - If this is truthy, the component pattern changes slightly so only completely new data can be entered, but not edited. This is useful for bank account information.
 - `reviewTitle` - The title shown on the review card. Defaults to `'ui:title'`
 - `editTitle` - The title shown on the edit card. Defaults to `'ui:title'`
-- `itemName` - The name of the set of data in the card. This shows up as a "New {itemName}" button, only if `volatileData` is set to `true`.
+- `itemName` - The name of the set of data in the card. This shows up as the title of the data set and may be in title case.
+- `itemNameLowerCase` - The name of the set of data. This shows up as a `"New {itemNameLowerCase || itemName}"` button or `"Add additional {itemNameLowerCase || itemName}"`, only if `volatileData` is set to `true`. This is included in addition to `itemName` because converting title-case to lower case isn't always a simple process, e.g. abbreviations and certain words need to be capitalized ("Veteran").
 
 ### `schema`
 
