--- a/packages/documentation/src/pages/forms/config-options.mdx
+++ b/packages/documentation/src/pages/forms/config-options.mdx
@@ -228,6 +228,10 @@ const formConfig = {
       }
     }
   }
+
+  // Deprecated properties still in use in applications/disability-benefits/all-claims/config/form.js
+  intentToFileUrl
+  submitErrorText
 }
 
 export default formConfig
