--- a/packages/documentation/src/pages/forms/config-options.mdx
+++ b/packages/documentation/src/pages/forms/config-options.mdx
@@ -69,11 +69,11 @@ const formConfig = {
 
   // The following properties are typically passed into a SaveInProgressIntro component in the form's introduction container
   // <SaveInProgressIntro
-        prefillEnabled={props.route.formConfig.prefillEnabled}
-        messages={props.route.formConfig.savedFormMessages}
-        verifyRequiredPrefill={props.route.formConfig.verifyRequiredPrefill}
-        downtime={this.props.route.formConfig.downtime}
-    >
+  //    prefillEnabled={props.route.formConfig.prefillEnabled}
+  //    messages={props.route.formConfig.savedFormMessages}
+  //    verifyRequiredPrefill={props.route.formConfig.verifyRequiredPrefill}
+  //    downtime={this.props.route.formConfig.downtime}
+  //>
   savedFormMessages: {
     notFound: errorMessages.savedFormNotFound,
     noAuth: errorMessages.savedFormNoAuth,
