--- a/packages/documentation/src/pages/forms/config-options.mdx
+++ b/packages/documentation/src/pages/forms/config-options.mdx
@@ -60,7 +60,7 @@ const formConfig = {
   // Calling transformForSubmit in platform/forms-system/src/js/helpers will remove view fields from the schema data
   transformForSubmit: (formConfig, form) => {},
 
-  // Component use as part of the default error message if submission of the form fails
+  // Component used as part of the default error message if submission of the form fails
   errorText: '',
 
   // Component that replaces the default error message component if submission of the form fails
