--- a/packages/documentation/src/pages/forms/about-the-schema-and-uischema-objects.mdx
+++ b/packages/documentation/src/pages/forms/about-the-schema-and-uischema-objects.mdx
@@ -159,13 +159,29 @@ The VAFS code includes additional `uiSchema` functionality not found in the RJSF
   // to render the review entry;
   // **Note** this entry will need to be defined in the uiSchema page, outside of the
   // defined item (one level up).
-  'ui:objectViewField': ({ props, renderedProperties, title, editButton }) => (
+  'ui:objectViewField': ({
+    schema,
+    uiSchema,
+    formData,
+    formContext,
+    renderedProperties,
+    title,
+    editButton,
+  }) => (
     <>
       <div className="form-review-panel-page-header-row">
         <h3 className="form-review-panel-page-header vads-u-font-size--h5">
           {title}
         </h3>
-        {editButton}
+        // use {editButton} (JSX), or create a custom edit button
+        <button
+          type="button"
+          className="edit-btn primary-outline"
+          aria-label={`Edit ${title}`}
+          onClick={() => formContext.onEdit()}
+        >
+          Edit
+        </button>
       </div>
       <dl className="review">{renderedProperties}</dl>
     </>
