--- a/packages/documentation/src/pages/forms/using-available-fields.mdx
+++ b/packages/documentation/src/pages/forms/using-available-fields.mdx
@@ -139,7 +139,7 @@ properties: {
 ### `addAnotherLabel`
 
 - Only applies when setting a schema type to `array`.
-- The `ArrayField` code will add an "Add Another" button with a suffix from `itemName` (usually in title-case)
+- The `ArrayField` code will add an "Add another" button with a suffix from `itemName`.
 - Including an `addAnotherLabel` replaces the add another button text:
 
   ```js
