--- a/packages/documentation/src/pages/forms/about-the-schema-and-uischema-objects.mdx
+++ b/packages/documentation/src/pages/forms/about-the-schema-and-uischema-objects.mdx
@@ -152,6 +152,48 @@ The VAFS code includes additional `uiSchema` functionality not found in the RJSF
     </div>
   ),
 
+  // Renders a custom object field on the review page. This function creates the wrapper
+  // around the `ui:reviewField` content. This component is passed in parameters
+  // including all the `props` (e.g. `formContext`, `schema`, `uiSchema`, etc), `title`,
+  // `renderedProperties` (the rendered `reviewField`) and `editButton` which is used
+  // to render the review entry;
+  // **Note** this entry will need to be defined in the uiSchema page, outside of the
+  // defined item (one level up).
+  'ui:objectViewField': ({
+    schema,
+    uiSchema,
+    formData,
+    formContext,
+    renderedProperties,
+    title,
+    defaultEditButton,
+  }) => (
+    <>
+      <div className="form-review-panel-page-header-row">
+        <h3 className="form-review-panel-page-header vads-u-font-size--h5">
+          {title}
+        </h3>
+        /* use the `defaultEditButton` function, or create a custom edit button
+          if the value is not included, it will fall back to its default
+          {defaultEditButton({
+            label: `Edit ${title}`, // aria-label value (default value)
+            onEdit: formContext.onEdit, // onClick function (default function)
+            text: 'Edit', // button textContent (default value)
+          )}
+        */
+        <button
+          type="button"
+          className="edit-btn primary-outline"
+          aria-label={`Edit ${title}`}
+          onClick={() => formContext.onEdit()}
+        >
+          Edit
+        </button>
+      </div>
+      <dl className="review">{renderedProperties}</dl>
+    </>
+  ),
+
   // Provides a function to make a field conditionally required. The data in the whole form,
   // with no page breaks, is the only parameter. Don't make a field required in the JSON
   // schema and in addition to using `ui:required` on that field. The index argument is
